WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203093
MediaRecorder should not prevent entering the back/forward cache
https://bugs.webkit.org/show_bug.cgi?id=203093
Summary
MediaRecorder should not prevent entering the back/forward cache
Chris Dumez
Reported
2019-10-17 09:46:52 PDT
MediaRecorder should not prevent entering the back/forward cache.
Attachments
Patch
(7.43 KB, patch)
2019-10-30 10:42 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews213 for win-future
(14.45 MB, application/zip)
2019-10-30 12:14 PDT
,
EWS Watchlist
no flags
Details
Patch
(8.21 KB, patch)
2019-10-30 15:50 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-10-30 10:20:40 PDT
<
rdar://problem/56748870
>
Chris Dumez
Comment 2
2019-10-30 10:42:31 PDT
Created
attachment 382330
[details]
Patch
EWS Watchlist
Comment 3
2019-10-30 12:14:09 PDT
Comment on
attachment 382330
[details]
Patch
Attachment 382330
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/13191950
New failing tests: fast/history/page-cache-media-recorder.html
EWS Watchlist
Comment 4
2019-10-30 12:14:13 PDT
Created
attachment 382340
[details]
Archive of layout-test-results from ews213 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews213 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Chris Dumez
Comment 5
2019-10-30 15:50:18 PDT
Created
attachment 382376
[details]
Patch
Chris Dumez
Comment 6
2019-11-04 08:19:06 PST
Comment on
attachment 382376
[details]
Patch ping review?
WebKit Commit Bot
Comment 7
2019-11-04 10:56:42 PST
Comment on
attachment 382376
[details]
Patch Clearing flags on attachment: 382376 Committed
r252003
: <
https://trac.webkit.org/changeset/252003
>
WebKit Commit Bot
Comment 8
2019-11-04 10:56:44 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug