MediaRecorder should not prevent entering the back/forward cache https://bugs.webkit.org/show_bug.cgi?id=203093 <rdar://problem/56748870>

Reviewed by Eric Carlson.

Source/WebCore:

Let pages using MediaRecorder enter the back/forward cache. On suspension, we
stop recording and we queue an error event which will get dispatched upon
resuming.

Test: fast/history/page-cache-media-recorder.html

* Modules/mediarecorder/MediaRecorder.cpp:
(WebCore::MediaRecorder::document const):
(WebCore::MediaRecorder::suspend):
(WebCore::MediaRecorder::activeDOMObjectName const):
(WebCore::MediaRecorder::scheduleDeferredTask):
(WebCore::MediaRecorder::shouldPreventEnteringBackForwardCache_DEPRECATED const): Deleted.
* Modules/mediarecorder/MediaRecorder.h:

LayoutTests:

Add layout test coverage.

* fast/history/page-cache-media-recorder-expected.txt: Added.
* fast/history/page-cache-media-recorder.html: Added.


Canonical link: https://commits.webkit.org/217167@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252003 268f45cc-cd09-0410-ab3c-d52691b4dbfc